2021-05-07  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/libpoke.h (struct pk_ios_if): New type.
	* libpoke/ios.c (ios_register_foreign_iod): New function.
	(ios_foreign_iod): Likewise.
	(ios_open): Acknowledge the foreign IO device.
	* libpoke/libpoke.c (pk_register_iod): Likewise.
	* testsuite/poke.libpoke/foreign-iod.c: New file.
	* testsuite/poke.libpoke/Makefile.am (check_PROGRAMS): Add
	foreign-iod.
	(foreign_iod_SOURCES): New rule.
	(foreign_iod_CPPFLAGS): Likewise.
	(foreign_iod_CFLAGS): Likewise.
	(foreign_iod_LDADD): Likewise.
	* testsuite/poke.libpoke/libpoke.exp: Execute foreign-iod test.

2021-05-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Remove spurious
	commented insn.

2021-05-06  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-help.pk (Poke_HelpEntry): Add fields `predicate and
	`synopsis'.
	* poke/poke.c (initialize): Initialize the value of have_libnbd_p.
	* poke/poke.pk: Define pk_have_libnbd_p.
	* poke/pk-save.pk: Likewise.
	* poke/pk-extract.pk: Likewise.
	* poke/pk-copy.pk: Likewise.
	* poke/pk-dump.pk: remove dot at the end of the summary.
	* poke/pk-help.pk (pk_help): Print summary lines for dot-commands.
	Add help topics for dot-commands.

2021-05-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_constructor): Use
	check_struct_field_constraint.
	* testsuite/poke.pkl/scons-constraints-1.pk: New test.
	* testsuite/poke.pkl/scons-constraints-2.pk: Likewise.
	* testsuite/poke.pktest/pktest-12.pk: Update test.

2021-05-06  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-gen.pks (struct_printer): Skip absent fields.
	* testsuite/poke.pkl/printf-value-16.pk: New test.
	* testsuite/poke.pkl/printf-value-17.pk: Likewise.
	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.

2021-05-05  Luca Saiu  <positron@gnu.org>

	* libpoke/ras: Comments.
	* libpoke/pvm.jitter: Comments.

2021-05-05  Luca Saiu  <positron@gnu.org>
